--- a/HwProj.CoursesService/HwProj.CoursesService.API/HwProj.CoursesService.API.csproj
+++ b/HwProj.CoursesService/HwProj.CoursesService.API/HwProj.CoursesService.API.csproj
@@ -13,6 +13,6 @@
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.18" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\HwProj.Repositories\HwProj.Repositories.csproj" />
+    <ProjectReference Include="/src/HwProj.Repositories/HwProj.Repositories.csproj" />
   </ItemGroup>
 </Project>
