--- a/HwProj.CoursesService/HwProj.CoursesService.API/appsettings.json
+++ b/HwProj.CoursesService/HwProj.CoursesService.API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=coursesservicedb;Trusted_Connection=False;MultipleActiveResultSets=true;user id=sa;password=Admin12345"
+        "DefaultConnection": "Data Source=dbhwproj.cgfhyentolvc.us-east-1.rds.amazonaws.com,1433;Initial Catalog=CoursesService;User ID=courseslogin;Password=#cor_;"
     },
     "Logging": {
         "LogLevel": {
