--- a/HwProj.CoursesService/HwProj.CoursesService.API/appsettings.json
+++ b/HwProj.CoursesService/HwProj.CoursesService.API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=tcp:dbserverhwproj.database.windows.net,1433;Initial Catalog=Courses;User ID=courseslogin;Password=#cor_;"
+        "DefaultConnection": "Data Source=tcp:dbserverhwproj.database.windows.net,1433;Initial Catalog=Courses;User ID=courseslogin;Password=#Pas5cor_;"
     },
     "Logging": {
         "LogLevel": {
