--- a/HwProj.HomeworkService/HwProj.HomeworkService.API/appsettings.json
+++ b/HwProj.HomeworkService/HwProj.HomeworkService.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=tcp:dbserverhwproj.database.windows.net,1433;Initial Catalog=Homeworks;User ID=homeworklogin;Password=#hom_;"
+    "DefaultConnection": "Data Source=tcp:dbserverhwproj.database.windows.net,1433;Initial Catalog=Homeworks;User ID=homeworklogin;Password=#Pas5hom_;"
   },
   "Logging": {
     "LogLevel": {
