--- a/HwProj.APIGateway/HwProj.APIGateway.API/appsettings.json
+++ b/HwProj.APIGateway/HwProj.APIGateway.API/appsettings.json
@@ -4,5 +4,10 @@
     "Courses": "http://localhost:5002",
     "Notifications": "http://localhost:5006",
     "Solutions": "http://localhost:5007"
+  },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercial"
+    }
   }
 }
